crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@38.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO numrange_test VALUES(numrange(1.7, 1.7, '[]'));"
---
InsertStmt@0..59
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..25
    Ident@12..25 "numrange_test"
  Whitespace@25..26 " "
  SelectStmt@26..56
    Values@26..32 "VALUES"
    Ascii40@32..33 "("
    List@33..56
      FuncCall@33..56
        Ident@33..41 "numrange"
        Ascii40@41..42 "("
        AConst@42..45
          Fconst@42..45 "1.7"
        Ascii44@45..46 ","
        Whitespace@46..47 " "
        AConst@47..50
          Fconst@47..50 "1.7"
        Ascii44@50..51 ","
        Whitespace@51..52 " "
        AConst@52..56
          Sconst@52..56 "'[]'"
  Ascii41@56..57 ")"
  Ascii41@57..58 ")"
  Ascii59@58..59 ";"

