crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@40.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT nr, lower_inc(nr), lower_inf(nr), upper_inc(nr), upper_inf(nr) FROM numrange_test;"
---
SelectStmt@0..89
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..9
    ColumnRef@7..9
      Ident@7..9 "nr"
  Ascii44@9..10 ","
  Whitespace@10..11 " "
  ResTarget@11..23
    FuncCall@11..23
      Ident@11..20 "lower_inc"
      Ascii40@20..21 "("
      ColumnRef@21..23
        Ident@21..23 "nr"
  Ascii41@23..24 ")"
  Ascii44@24..25 ","
  Whitespace@25..26 " "
  ResTarget@26..38
    FuncCall@26..38
      Ident@26..35 "lower_inf"
      Ascii40@35..36 "("
      ColumnRef@36..38
        Ident@36..38 "nr"
  Ascii41@38..39 ")"
  Ascii44@39..40 ","
  Whitespace@40..41 " "
  ResTarget@41..53
    FuncCall@41..53
      Ident@41..50 "upper_inc"
      Ascii40@50..51 "("
      ColumnRef@51..53
        Ident@51..53 "nr"
  Ascii41@53..54 ")"
  Ascii44@54..55 ","
  Whitespace@55..56 " "
  ResTarget@56..68
    FuncCall@56..68
      Ident@56..65 "upper_inf"
      Ascii40@65..66 "("
      ColumnRef@66..68
        Ident@66..68 "nr"
  Ascii41@68..69 ")"
  Whitespace@69..70 " "
  From@70..74 "FROM"
  Whitespace@74..75 " "
  RangeVar@75..88
    Ident@75..88 "numrange_test"
  Ascii59@88..89 ";"

