crates/pg_syntax/tests/snapshots/postgres_regress/rangetypes@44.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: SELECT * FROM numrange_test WHERE 1.9 <@ nr;
---
SelectStmt@0..44
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeVar@14..27
    Ident@14..27 "numrange_test"
  Whitespace@27..28 " "
  Where@28..33 "WHERE"
  Whitespace@33..34 " "
  AExpr@34..43
    AConst@34..37
      Fconst@34..37 "1.9"
    Whitespace@37..38 " "
    Op@38..40 "<@"
    Whitespace@40..41 " "
    ColumnRef@41..43
      Ident@41..43 "nr"
  Ascii59@43..44 ";"

